--- a/natesurvey.tex
+++ b/natesurvey.tex
@@ -21,7 +21,7 @@ Examples of two major forms of computer mediated poetry creation will be
 discussed: poetry where the computer is a generator of text, and poetry where
 the computer is a filter or reassembler of an inputted text. Finally, this
 paper will evaluate the extent to which computer poetry can evolve through the
-utilization of Internet-based corpora.\cite{Hart96}
+utilization of Internet-based corpora.
 \end{abstract}
 
 \section{Introduction}
