--- a/surv.bib
+++ b/surv.bib
@@ -1,5 +1,5 @@
-% srh.bib
-% bibliography file for sub-regular phontactics work
+% surv.bib
+% bib file for senior sem survey
   
 @Book{Hart96,
   author =       {Charles O. Hartman},
@@ -7,3 +7,11 @@
   publisher =    {Wesleyan University Press},
   year =         1996
 }
+
+@Book{Chamb84,
+    author =    {William Chamberlain},
+    title =     {The Policeman's Beard is Half-Constructed: Computer Prose and Poetry},
+    publisher = {Warner Software/Books},
+    year =      {1984}
+}
+    
