add more outline
Ignore-this: d693b43e622abef7c20708374d30bfe5

darcs-hash:20090926195903-ee66a-b9a585c8438cf4f999960a2cd81cd12566f52051.gz

--- a/natesurvey.tex
+++ b/natesurvey.tex
@@ -69,8 +69,13 @@ software designed only to, say, shuffle the characters or words in its input
 but scales up to grammatical natural language generation in conversation with a
 human user.
 
-\section{Method 1}
-\section{Method 2}
+\section{RACTER}
+\section{Travesty Engine}
+\section{Prose}
+\section{GRIOTS}
+\section{etc0}
+\section{etc1}
+\section{etc2}
 \section{Conclusion}
 
 \bibliography{surv}
